--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.1",
-    "@mui/styled-engine-sc": "^5.10.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "@emotion/react": "11.10.0",
+    "@emotion/styled": "11.10.0",
+    "@material-ui/core": "4.12.4",
+    "@mui/icons-material": "5.10.6",
+    "@mui/lab": "5.0.0-alpha.101",
+    "@mui/material": "5.10.7",
+    "@mui/styled-engine-sc": "5.10.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "0.27.2",
     "json-server": "^0.17.0",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-native-uuid": "^2.0.1",
-    "react-router-dom": "^6.3.0",
+    "material-ui-icons": "1.0.0-beta.36",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.4.0",
+    "react-material-ui-carousel": "3.4.2",
+    "react-native-uuid": "2.0.1",
+    "react-router-dom": "6.4.1",
     "react-scripts": "5.0.1",
-    "react-swipeable-views": "^0.14.0",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "react-swipeable-views": "0.14.0",
+    "styled-components": "5.3.5",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
